Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -2722,6 +2722,9 @@ div.toctitle {
 .jqx-grid-cell-hover {
 	background: #cbced1 !important;
 }
+.w-350 {
+	width: 100%;
+}
 
 /*******************************
 ********************************
@@ -2930,7 +2933,7 @@ END END END
 	ol.flowNone li a,ul.flowNone li a {
 		padding-right: 3px;
 	}
-}
+
 }
 /* ≥ xxl (1400px, in BS5) test */
 @media (min-width: 1400px) {
@@ -2955,5 +2958,110 @@ END END END
 		width: 400px;
 		max-width: 90vw;
 		transform: translateX(-400px);
+	}
+
+	ol.flowXXS, ul.flowXXS {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 221px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowXXS li, ul.flowXXS li {
+		width: 33%;
+		padding-right: .5rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowXXS li a, ul.flowXXS li a {
+		padding-right: 3px;
+	}
+	ol.flowXS, ul.flowXS {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 403px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowXS li, ul.flowXS li {
+		width: 33%;
+		padding-right: 1rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowXS li a, ul.flowXS li a {
+		padding-right: 3px;
+	}
+	ol.flowSm,ul.flowSm {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 550px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowSm li,ul.flowSm li {
+		width: 33%;
+		padding-right: .5rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowSm li a,ul.flowSm li a {
+		padding-right: 3px;
+	}
+	ol.flowMd, ul.flowMd {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 627px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowMd li,ul.flowMd li{
+		width: 33%;
+		padding-right: .5rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowMd li a,ul.flowMd li a {
+		padding-right: 3px;
+	}	
+	ol.flowLg,ul.flowLg {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 815px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowLg li,ul.flowLg li {
+		width: 33%;
+		padding-right: .5rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowLg li a, ul.flowLg li a {
+		padding-right: 3px;
+	}	
+	ol.flowXL, ul.flowXL {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: 900px; /* need to specify height :-( */
+		column-count: 3;
+	}
+	ol.flowXL li,ul.flowXL li {
+		width: 33%;
+		padding-right: .5rem;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowXL li a,ul.flowXL li a {
+		padding-right: 3px;
+	}
+	ol.flowNone,ul.flowNone {
+		display:flex;
+		flex-flow: column wrap; /* direction: column */
+		height: auto; /* need to specify height :-( */
+		column-count: 1;
+	}
+	ol.flowNone li,ul.flowNone li {
+		width: 100%;
+		overflow-wrap: anywhere;
+		list-style-position:inside;
+	}
+	ol.flowNone li a,ul.flowNone li a {
+		padding-right: 3px;
 	}
 }
